lots of work on the queue, still not perfect but getting better

--- a/atci-rust/assets/index.css
+++ b/atci-rust/assets/index.css
@@ -1701,6 +1701,10 @@
     line-height: var(--tw-leading, var(--text-xs--line-height));
   }
 
+  .text-\[10px\] {
+    font-size: 10px;
+  }
+
   .leading-6 {
     --tw-leading: calc(var(--spacing) * 6);
     line-height: calc(var(--spacing) * 6);
