--- a/assets/index.css
+++ b/assets/index.css
@@ -616,10 +616,6 @@
     margin-top: calc(var(--spacing) * 6);
   }
 
-  .mt-20 {
-    margin-top: calc(var(--spacing) * 20);
-  }
-
   .mr-1 {
     margin-right: calc(var(--spacing) * 1);
   }
@@ -739,10 +735,6 @@
     height: calc(var(--spacing) * 7);
   }
 
-  .h-8 {
-    height: calc(var(--spacing) * 8);
-  }
-
   .h-9 {
     height: calc(var(--spacing) * 9);
   }
@@ -813,14 +805,6 @@
 
   .min-h-screen {
     min-height: 100vh;
-  }
-
-  .w-0\.5 {
-    width: calc(var(--spacing) * .5);
-  }
-
-  .w-1 {
-    width: calc(var(--spacing) * 1);
   }
 
   .w-1\/2 {
@@ -985,10 +969,6 @@
 
   .animate-spin {
     animation: var(--animate-spin);
-  }
-
-  .cursor-col-resize {
-    cursor: col-resize;
   }
 
   .cursor-default {
@@ -1211,11 +1191,6 @@
     border-top-width: 1px;
   }
 
-  .border-r {
-    border-right-style: var(--tw-border-style);
-    border-right-width: 1px;
-  }
-
   .border-b {
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 1px;
@@ -1367,14 +1342,8 @@
     background-color: var(--color-blue-600);
   }
 
-  .bg-border, .bg-border\/50 {
+  .bg-border {
     background-color: var(--border);
-  }
-
-  @supports (color: color-mix(in lab, red, red)) {
-    .bg-border\/50 {
-      background-color: color-mix(in oklab, var(--border) 50%, transparent);
-    }
   }
 
   .bg-card {
@@ -1444,16 +1413,6 @@
   @supports (color: color-mix(in lab, red, red)) {
     .bg-primary\/10 {
       background-color: color-mix(in oklab, var(--primary) 10%, transparent);
-    }
-  }
-
-  .bg-primary\/20 {
-    background-color: var(--primary);
-  }
-
-  @supports (color: color-mix(in lab, red, red)) {
-    .bg-primary\/20 {
-      background-color: color-mix(in oklab, var(--primary) 20%, transparent);
     }
   }
 
@@ -2146,16 +2105,6 @@
 
     .hover\:bg-orange-700:hover {
       background-color: var(--color-orange-700);
-    }
-
-    .hover\:bg-primary\/20:hover {
-      background-color: var(--primary);
-    }
-
-    @supports (color: color-mix(in lab, red, red)) {
-      .hover\:bg-primary\/20:hover {
-        background-color: color-mix(in oklab, var(--primary) 20%, transparent);
-      }
     }
 
     .hover\:bg-primary\/90:hover {
