--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -147,6 +147,15 @@
     }
   }
   
+  @keyframes moveUp {
+    0% {
+      transform: translateY(5px);
+    }
+    100% {
+      transform: translateY(-5px);
+    }
+  }
+  
   .scrollbar-hide {
     /* Hide scrollbar for Chrome, Safari and Opera */
     &::-webkit-scrollbar {
