--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -156,6 +156,15 @@
     }
   }
   
+  @keyframes moveUpArrow {
+    0% {
+      transform: translateY(0px);
+    }
+    100% {
+      transform: translateY(-24px);
+    }
+  }
+  
   .scrollbar-hide {
     /* Hide scrollbar for Chrome, Safari and Opera */
     &::-webkit-scrollbar {
